# LOKI

./: .extractignore  .gitignore  CMakeLists.txt  README.md  go.mod  go.sum
cmd/: main.go
data/: intents.json
include/: OllamaClient.h  msvc_compat.h
include/intent/: IntentClassifier.h
include/loki/: AgentManager.h
include/loki/agents/: CalculationAgent.h  IAgent.h  SystemControlAgent.h
include/loki/core/: Config.h  EmbeddingModel.h  LokiWorker.h  OllamaClient.h  Whisper.h
include/loki/gui/: MainWindow.h
include/loki/intent/: FastClassifier.h  Intent.h  IntentClassifier.h
include/loki/tts/: AsyncTTSManager.h  PiperTTS.h  TTSWorkerThread.h
internal/audio/: stt.go  wakeword.go
internal/llm/: ollama_client.go
models/porcupine/: Hey-Loki.ppn
src/: AgentManager.cpp  Config.cpp  OllamaClient.cpp  main.cpp  whisper.cpp
src/agents/: CalculationAgent.cpp  SystemControlAgent.cpp
src/core/: Config.cpp  EmbeddingModel.cpp  LokiWorker.cpp  OllamaClient.cpp  Whisper.cpp
src/gui/: MainWindow.cpp
src/intent/: FastClassifier.cpp  IntentClassifier.cpp
src/tts/: AsyncTTSManager.cpp  PiperTTS.cpp  TTSWorkerThread.cpp
